# usa-route-fuel-optimizer

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
deploy/: entrypoint.sh  nginx.conf
fuel_route/: jinja2.py  settings.py  urls.py
route_planner/: fuel_service.py  optimizer.py  route_service.py  urls.py  views.py
route_planner/management/commands/: prewarm_geocoding.py
templates_jinja2/route_planner/: index.html
