[project]
name = "ena-spotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.2",
    "djangorestframework>=3.16.1",
    "jinja2>=3.1.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polyline>=2.0.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
]
prod = [
    "gunicorn>=25.1.0",
    "redis>=5.0.0",
]
